--- a/css/grid.css
+++ b/css/grid.css
@@ -40,7 +40,10 @@ body {
   margin-top: 7%;
   margin-left: 12%;
   margin-right: 12%;
+  overflow: auto;
+}
 
+.column-1-3:after {
   clear: both;
 }
 
