--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -68,7 +68,7 @@ p {
   font-size: 15px;
   font-family: 'Playfair Display', serif;
 
-  margin-left: 18%;
+  text-align: center;
   margin-right: 10%;
 }
 
@@ -95,4 +95,10 @@ p {
   margin: 5% 40%;
   display: flex;
   justify-content: center;
+}
+
+.form-label {
+  font-family: 'Playfair Display', serif;
+  font-weight: 400;
+  font-size: 16px;
 }
