--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -47,9 +47,11 @@ p {
 }
 
 .price-rectangle {
-  padding-top: 10px;
-  padding-bottom: 10px;
+  padding-top: 20px;
+  padding-bottom: 20px;
   padding-left: 5px;
+
+  margin: 10px 0;
 
   width: 100%;
   height: auto;
@@ -69,7 +71,6 @@ p {
   font-family: 'Playfair Display', serif;
 
   text-align: center;
-  margin-right: 10%;
 }
 
 .review-1-3 {
@@ -99,6 +100,26 @@ p {
 
 .form-label {
   font-family: 'Playfair Display', serif;
-  font-weight: 400;
+  font-weight: 600;
+  font-size: 16px;
+  margin-bottom: 5px;
+}
+
+.contacts-field {
+  box-sizing: border-box;
+  padding: 0.5rem 5rem;
+  margin-bottom: 10px;
+  border-radius: 5px;
+  border: 3px solid hsl(0, 0%, 90%);
+}
+
+.contacts_button {
+  background-color: hsl(0, 0%, 90%);;
+  border: none;
+  color: black;
+  padding: 10px 15px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
   font-size: 16px;
 }
