--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -14,6 +14,8 @@
   width: 100%;
   height: auto;
   max-width: 100%;
+
+  z-index: 2;
 }
 
 .contents a {
@@ -121,4 +123,9 @@ p {
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
+}
+
+.parallax-window {
+  min-height: 400px;
+  background: transparent;
 }
